...
					onRemove={handleRemove}
				/>

				<TouchableOpacity
					className="bg-accent-blue rounded-lg p-4.5 items-center"
					onPress={handleSave}
					testID="save_recipe_btn"
					accessibilityLabel="save_recipe_btn"
				>
					<Text className="text-black font-bold text-md">Save Recipe</Text>
				</TouchableOpacity>
			</ScrollView>
		</Modal>
...
