appId: com.nazarpryt.staglioperfetto
---
- waitForAnimationToEnd
- tapOn:
    point: "50%,50%"
- tapOn:
    id: "new_recipe_btn"
- tapOn:
    id: "recipe_name_input"
- inputText: "E2E Direct"
- hideKeyboard
- tapOn:
    id: "save_recipe_btn"
- waitForAnimationToEnd
