appId: com.nazarpryt.staglioperfetto
---
- waitForAnimationToEnd
- tapOn:
    point: "50%,50%"
- tapOn:
    id: "new_recipe_btn"
- tapOn:
    id: "recipe_name_input"
- inputText: "E2E Biga"
- hideKeyboard
- tapOn:
    id: "method_biga"
- scrollUntilVisible:
    element:
      id: "save_recipe_btn"
    direction: DOWN
- tapOn:
    id: "save_recipe_btn"
- waitForAnimationToEnd
